--- a/schnapps/plugins/meshgen/netgen/CMakeLists.txt
+++ b/schnapps/plugins/meshgen/netgen/CMakeLists.txt
@@ -96,4 +96,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(${PROJECT_NAME})
 target_compile_definitions(${PROJECT_NAME} PRIVATE "-DNGINTERFACE_EXPORTS")
 target_compile_definitions(${PROJECT_NAME} PRIVATE "-DNGLIB_EXPORTS")
+target_compile_options(${PROJECT_NAME} PUBLIC "-std=c++11")
+
 #add_subdirectory(nglib)
